# c-playground

./: .gitignore  CMakeLists.txt  consts.h  main.c  win_check.c
.ccls-cache/@@home@ala@Projects@c@playground/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@termios-baud.h.blob  @usr@include@bits@termios-c_cc.h.blob  (+54 more)
snake-game/: CMakeLists.txt  build.sh  readme.md
snake-game/src/: consts.h  main.c
snake-game/src/logic/: apple.c  apple.h  collisions.c  snake.c  snake.h
snake-game/src/view/: draw_game.c  draw_game.h  input.c  input.h  print_game.c  print_game.h  terminal_tools.c
src/: consts.c  consts.h  game_print.c  game_print.h  logic.c  logic.h  main.c  terminal_tools.c  terminal_tools.h  win_check.c
tests/: run_tests.c  test_win_check.c
tic-tac-toe/: readme.md
(+24 files in other folders)
